welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:-8: error: Unmatched closing brace '}' ignored here
	}
        ^Program:-7: error: illegal start of statement (no modifiers allowed here)
	override def backward(i: Int) {
        ^Program:-2: error: illegal start of statement (no modifiers allowed here)
	override def run() { 
        ^Program:6: error: ';' expected but 'else' found.
  else { for (i2 <- 1 to nbPas) { avance(); } }; } 
  ^